Criando um novo Modal

--- a/src/app/components/lote/modal/lote-modal/lote-modal.component.html
+++ b/src/app/components/lote/modal/lote-modal/lote-modal.component.html
@@ -1,6 +1,11 @@
-<div class="modal-overlay">
-  <div class="modal-container">
-    <button class="close-button" (click)="close()">×</button>
-    <div #modalContent></div>
+<div GlassMain flex="g col hc" class="aa">
+  <div Height flex="nscl g 50 vc">
+    <div Width flex="nscl g 50" gap="0">
+      <div ColorfulBG></div>
+      <div Glass flex="g">
+        test
+        <!-- Conteúdo do modal -->
+      </div>
+    </div>
   </div>
 </div>
