--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,31 @@
-<div flex="r 100">
+<div flex="100">
   <!-- HotBar -->
-  <div flex="on ns b center" pad="5 all">
+  <div flex="ns col b center" pad="5 all">
     <div flex="vc">LogoIcon</div>
     <div flex="g c">{{title}}</div>
     <label>{{theme}}</label>
     <mat-slide-toggle [(ngModel)]="value" (change)="updateTheme()"></mat-slide-toggle>
   </div>
   <!-- Main/Routes -->
-  <div flex="on r g" pad="10 bottom left right">
-    <div flex="g hscl">
+  <div flex="g" pad="10 bottom left right">
+    <div flex="off g hscl">
+      
+      <div flex="col">
+        @for (item of [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1]; track $index) {
+          <div>Conteudo falso</div>
+        }
+      </div>
+      <div flex="col">
+        @for (item of [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1]; track $index) {
+          <div>Conteudo falso</div>
+        }
+      </div>
+      <div flex="col">
+        @for (item of [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1]; track $index) {
+          <div>Conteudo falso</div>
+        }
+      </div>
+
       <router-outlet/>
     </div>
   </div>
