--- a/src/utils/scss/meta.scss
+++ b/src/utils/scss/meta.scss
@@ -3,3 +3,7 @@
 @function type-of($value) {
   @return meta.type-of($value);
 }
+
+@function function-exists($name, $module) {
+  @return meta.function-exists($name);
+}
