--- a/src/utils/scss/theme.scss
+++ b/src/utils/scss/theme.scss
@@ -58,11 +58,11 @@
 
     $palette: (
       theme: (
-        // primary:          get($material-3, primary),
-        // secondary:        get($material-3, primary, secondary),
-        // tertiary:         get($material-3, tertiary),
-        // neutral:          get($material-3, primary, neutral),
-        // neutral-variant:  get($material-3, primary, neutral-variant),
+        primary:          get($material-3, primary),
+        secondary:        get($material-3, primary, secondary),
+        tertiary:         get($material-3, tertiary),
+        neutral:          get($material-3, primary, neutral),
+        neutral-variant:  get($material-3, primary, neutral-variant),
         error:            get($material-3, primary, error),
       ),
       material: $material-2
@@ -93,8 +93,8 @@
   $warn    : rgb(145, 0, 0),
 ) {
   $primary-pelette: _palette-2($primary);
-  // $accent-pelette: _palette-2($accent);
-  // $warn-pelette: _palette-2($warn);
+  $accent-pelette: _palette-2($accent);
+  $warn-pelette: _palette-2($warn);
 
   @return (
     primary: $primary-pelette,
@@ -111,7 +111,6 @@
   $error:     rgb(145, 0, 0)
 ) {
   $keys: (0,10,20,25,30,35,40,50,60,70,80,90,95,98,99,100);
-  
   $primary-palette:   gradiant($primary, $keys);
   $secondary-palette: gradiant($secondary, $keys);
   $tertiary-palette:  gradiant($tertiary, $keys);
