--- a/src/app/components/lote/modal/lote-modal/lote-modal.component.html
+++ b/src/app/components/lote/modal/lote-modal/lote-modal.component.html
@@ -3,7 +3,22 @@
     <div Width flex="nscl g 50" gap="0">
       <div ColorfulBG></div>
       <div Glass flex="g">
-        test
+        <app-lote-filters></app-lote-filters>
+
+
+        <div testFilter>
+          <div>test</div>
+          <div>test</div>
+          <div>test</div>
+          <div>test</div>
+          <div>test</div>
+          <div>test</div>
+          <div>test</div>
+          <div>test</div>
+          <div>test</div>
+          <div>test</div>
+        </div>
+
         <!-- Conteúdo do modal -->
       </div>
     </div>
