--- a/src/utils/scss/height.scss
+++ b/src/utils/scss/height.scss
@@ -1,37 +1,42 @@
 @use 'utils' as *;
 @use 'math' as *;
 
-@mixin _setHeight($unit, $type) {
-  #{attrContains(height, '&$', #{$i}#{$type})} {
-    height: #{$unit}#{$type}
+
+@mixin setHeight($type, $unit) {
+  #{attrContains(height, '&$', $unit#{$type})} {
+    height: #{$unit}#{$type};
   }
-  #{attrContains(height, '&$', min#{$i}#{$type})} {
-    min-height: #{$unit}#{$type}
+  #{attrContains(height, '&$', min#{$unit}#{$type})} {
+    min-height: #{$unit}#{$type};
   }
-  #{attrContains(height, '&$', max#{$i}#{$type})} {
-    max-height: #{$unit}#{$type}
+  #{attrContains(height, '&$', max#{$unit}#{$type})} {
+    max-height: #{$unit}#{$type};
   }
 }
 
 @mixin HeightStructure($min: 0%, $default: max-content, $max: 100%) {
+  * {
+    &:has(>[height-father]){
+      &:has(>#{attrContains(height-father, '&$', 'max100%')}) {
+        max-height: 100%;
+      }
+    }
+  } 
+
   [height] {
-    height: $min;
-    min-height: $default;
-    max-height: $max;
+    // height: $min;
+    // min-height: $default;
+    // max-height: $max;
 
     /* (0, 50, 100, 150, ...) */
     @each $i in valuesFromSteps(50, 0, 20) {
-      /* Pixel */
-      #{attrContains(height, '&$', $i)} {
-        height: toPixel($i);
-      }
+      @include setHeight('px', $i);
     }
-
     /* (0, 5, 10, 15, ...) */
     @each $i in valuesFromSteps() {
-      @include _setHeight(toPercent($i), '%');
-      @include _setHeight(toVH($i), 'vh');
-      @include _setHeight(toVW($i), 'vw');
+      @include setHeight('%', $i);
+      @include setHeight('vh', $i);
+      @include setHeight('vw', $i);
     }
   }
 }
