--- a/src/utils/scss/sticky.scss
+++ b/src/utils/scss/sticky.scss
@@ -1,4 +1,10 @@
-@mixin stickyStructure() {
+@mixin StickyStructure() {
+  * {
+    &:has([sticky]) {
+      border-radius: 5px;
+    }
+  }
+
   [sticky]:not(table) {
     z-index: 1;
     position: sticky;
@@ -10,23 +16,23 @@
       inset: 0;
       z-index: -1;
       border-radius: 5px;
-      background: rgba(0, 0, 0, 0.3);
-      mask: linear-gradient(to top, transparent, black 50%);
-      backdrop-filter: blur(3px);
+      // background: rgba(0, 0, 0, 0.3);
+      // mask: linear-gradient(to top, transparent, black 50%);
+      // backdrop-filter: blur(3px);
     }
 
     &[sticky~="bottom"] {
-      mask: linear-gradient(to bottom, transparent, black 50%);
+      // mask: linear-gradient(to bottom, transparent, black 50%);
       top: auto;
       bottom: 0;
     }
     &[sticky~="left"] {
-      mask: linear-gradient(to left, transparent, black 50%);
+      // mask: linear-gradient(to left, transparent, black 50%);
       top: auto;
       left: 0;
     }
     &[sticky~="right"] {
-      mask: linear-gradient(to right, transparent, black 50%);
+      // mask: linear-gradient(to right, transparent, black 50%);
       top: auto;
       right: 0;
     }
